<resources>
    <string name="app_name">SDK Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Payroc Development</string>
    <string name="nav_header_subtitle" translatable="false">development@payroc.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email_support">Email Support</string>
    <string name="call_support">Call Support</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="testAmount" translatable="false">5.10</string>
    <string name="testCard" translatable="false">4242424242424242</string>
    <string name="testExpDate" translatable="false">12/20</string>
    <string name="testCvv" translatable="false">123</string>
    <string name="testPostal" translatable="false">84041</string>

    <string name="nuke_stored_settings">Nuke Stored Settings</string>
    <string name="payment_processing">Payment Processing</string>
    <string name="manual_pay">Manual Pay</string>
    <string name="partial_pay">Partial Pay</string>
    <string name="emv_contactless">EMV / Contactless</string>
    <string name="extras">Extras</string>
    <string name="settings_page_tools">Settings Page Tools</string>
    <string name="ingest_transaction">Ingest Transaction</string>
    <string name="multi_line_transaction">Multi Line Transaction</string>
    <string name="transaction_history">Transaction History</string>
    <string name="nav_inventory_transaction">Inventory Transaction</string>
    <string name="nav_permissions">Permissions</string>
    <string name="enable_transaction">Enable Transaction</string>
    <string name="enable_history">Enable History</string>
    <string name="enable_resending_receipts">Enable Resending Receipts</string>
    <string name="enable_refund">Enable Refund</string>
    <string name="enable_void">Enable Void</string>

    <string name="api_username">Api Username</string>
    <string name="api_password">Api Password</string>
    <string name="api_key">Api Key</string>
    <string name="signature_test">Signature Test</string>
    <string name="email_test">Email Test</string>
    <string name="tip_test">Tip Test</string>
    <string name="transaction_review_test">Transaction Review Test</string>
    <string name="pay_view">Pay View</string>
    <string name="main_activity_title">Payroc SDK Demo App</string>
    <string name="gateway_id">Gateway ID</string>
    <string name="status_view_test">Status View Test</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="capture_all">Capture All</string>
    <string name="time_out">Time out</string>

    <string name="enable_background_anim">Enable Background Animation</string>
    <string name="txn_type">%s Transaction</string>
    <string name="module_tests">Module Tests</string>
    <string name="txn_types">Txn Types</string>
</resources>
