<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tools.ToolsFragment">

    <Button
            android:text="@string/email_support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toolsEmailSupport"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/call_support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toolsCallSupport"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/toolsEmailSupport"/>

    <Switch
        android:id="@+id/background_anim_switch"
        style="@style/TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enable_background_anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolsCallSupport" />

</androidx.constraintlayout.widget.ConstraintLayout>
