<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <EditText
            android:id="@+id/apiUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/api_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@={ viewModel.apiUsername }" />

        <EditText
            android:id="@+id/apiPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/api_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/apiUsername"
            app:layout_constraintStart_toStartOf="@+id/apiUsername"
            app:layout_constraintTop_toBottomOf="@+id/apiUsername" />

        <EditText
            android:id="@+id/gatewayId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/gateway_id"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/apiUsername"
            app:layout_constraintStart_toStartOf="@+id/apiUsername"
            app:layout_constraintTop_toBottomOf="@+id/apiPassword" />

        <Spinner
            android:id="@+id/settingsGatewaySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@+id/apiPassword"
            app:layout_constraintStart_toStartOf="@+id/apiPassword"
            app:layout_constraintTop_toBottomOf="@+id/gatewayId" />

        <Spinner
            android:id="@+id/settingsEnvironmentSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@+id/apiPassword"
            app:layout_constraintStart_toStartOf="@+id/apiPassword"
            app:layout_constraintTop_toBottomOf="@+id/settingsGatewaySpinner" />

        <Button
            android:id="@+id/saveApiSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/settingsEnvironmentSpinner"
            app:layout_constraintStart_toStartOf="@+id/settingsEnvironmentSpinner"
            app:layout_constraintTop_toBottomOf="@+id/settingsEnvironmentSpinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>